# Atlas

./: .gitignore  AGENTS.md  README.md  atlas-deployment-and-usage.html  hitl.md  info.md  issue-5-company-checklist.html  pyproject.toml
atlas/: __init__.py  attachment_evidence.py  cli.py  commands.py  fa_stem.py  fa_stem_bundles.py  fa_stem_models.py  fa_stem_parsers.py  fa_stem_prompts.py  fa_stem_report.py  fake_loop.py  json_fences.py  llm_wiki_ingest.py  prompt_history.py  shell_policy.py  skills.py  slash_suggestions.py  tgenie_adapter.py  tgenie_setup.py  tgenie_tool_loop.py  tool_catalog.py  tool_loop_events.py  tool_protocol.py  tool_runtime.py  tui.py  wiki.py  wiki_graph.py  wiki_html.py  wiki_markup.py  wiki_models.py  workflow_commands.py  workspace_paths.py
docs/: fa-stem-demo-validation-checklist.html
docs/agents/: domain.md  issue-tracker.md
scripts/: hitl_collect_windows.ps1  probe_tgenie.py
tests/: test_attachment_evidence.py  test_cli.py  test_commands.py  test_fa_stem.py  test_fake_tool_loop.py  test_json_fences.py  test_llm_wiki_ingest.py  test_probe_tgenie.py  test_prompt_history.py  test_readme.py  test_shell_policy.py  test_skills.py  test_slash_suggestions.py  test_tgenie_adapter.py  test_tgenie_setup.py  test_tgenie_tool_loop.py  test_tool_protocol.py  test_tool_runtime.py  test_tui.py  test_wiki.py  test_wiki_markup.py  test_workspace_paths.py
wiki/: index.md  log.md
wiki/schema/: page.md
