[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-agent"
version = "0.1.0"
description = "Python agent harness for operating tGenie through Chrome."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44",
    "pyvis>=0.3.2",
    "textual>=8.2.7",
]

[project.scripts]
atlas = "atlas.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas*"]
